Bug 87740 - [Qt] REGRESSION(r118568): It broke fast/forms/textarea-maxlength.html on Qt 4.8
Summary: [Qt] REGRESSION(r118568): It broke fast/forms/textarea-maxlength.html on Qt 4.8
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 79666 87521
  Show dependency treegraph
 
Reported: 2012-05-29 06:34 PDT by Csaba Osztrogonác
Modified: 2012-05-30 15:59 PDT (History)
3 users (show)

See Also:


Attachments
Possible fix (875 bytes, patch)
2012-05-29 11:05 PDT, mitz
no flags Details | Formatted Diff | Diff
Use the return value of setUpIterator in the NonSharedCharacterBreakIterator constructor (2.82 KB, patch)
2012-05-30 13:13 PDT, mitz
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-05-29 06:34:40 PDT
After http://trac.webkit.org/changeset/118568, fast/forms/textarea-maxlength.html 
started to fail on Qt 4.8 platforms. (It passes on Qt 5, because Qt 5 build uses ICU)

--- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/forms/textarea-maxlength-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/forms/textarea-maxlength-actual.txt 
@@ -23,8 +23,8 @@
 PASS textArea.value is "A\nB"
 PASS textArea.value is "a\n\n"
 PASS textArea.value is "\n\n\n"
-PASS textArea.value is "AB" + fancyX
-PASS textArea.value.length is 5
+FAIL textArea.value should be ABxĚ̲. Was AB.
+FAIL textArea.value.length should be 5. Was 2.
 PASS textArea.value is "ABC"
 PASS textArea.value is "AB" + u10000
 PASS textArea.value.length is 4
Comment 1 Csaba Osztrogonác 2012-05-29 06:48:16 PDT
I skipped it - http://trac.webkit.org/changeset/118766
Please unskip it with the proper fix.
Comment 2 mitz 2012-05-29 11:05:11 PDT
Created attachment 144588 [details]
Possible fix

Sorry about breaking this! I don’t have access to this build configuration, but I think this patch will fix the regression. Can you try it? Thanks!
Comment 3 Csaba Osztrogonác 2012-05-30 12:56:08 PDT
(In reply to comment #2)
> Created an attachment (id=144588) [details]
> Possible fix
> 
> Sorry about breaking this! I don’t have access to this build configuration, but I think this patch will fix the regression. Can you try it? Thanks!

Not problem. I tried your patch and it fixed fast/forms/textarea-maxlength.html test. Thanks.
Comment 4 mitz 2012-05-30 13:13:45 PDT
Created attachment 144901 [details]
Use the return value of setUpIterator in the NonSharedCharacterBreakIterator constructor
Comment 5 mitz 2012-05-30 15:59:17 PDT
Fixed in <http://trac.webkit.org/r118990>.