[Qt] REGRESSION(r118568): It broke fast/forms/textarea-maxlength.html on Qt 4.8 https://bugs.webkit.org/show_bug.cgi?id=87740

Reviewed by Darin Adler.

Source/WebCore:

* platform/text/qt/TextBreakIteratorQt.cpp:
(WebCore::NonSharedCharacterBreakIterator::NonSharedCharacterBreakIterator): Changed to use
the return value of setUpIterator.

LayoutTests:

* platform/qt-4.8/Skipped: Removed fast/forms/textarea-maxlength.html.



Canonical link: https://commits.webkit.org/105710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118990 268f45cc-cd09-0410-ab3c-d52691b4dbfc